2018-07-06  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* config.sub: Sync with upstream version 2018-07-03.

2018-07-06  Sebastian Huber  <sebastian.huber@embedded-brains.de>

	* config.guess: Sync with upstream version 2018-06-26.
	* config.sub: Sync with upstream version 2018-07-02.

2018-06-19  Bernhard M. Wiedemann  <bwiedemann@suse.de>

        * libtool.m4: Sort output of 'find' to enable deterministic builds.
	* ltmain.sh: Likewise.

2018-07-03  Segher Boessenkool  <segher@kernel.crashing.org>

	* contrib/config-list.mk: Remove powerpc-linux_paired.

2018-06-29  Alexandre Oliva <oliva@adacore.com>

	* configure.ac: Introduce support for @unless/@endunless.
	* Makefile.tpl (dep-kind): Rewrite with cond; return
	postbootstrap in some cases.
	(make-postboot-dep, postboot-targets): New.
	(dependencies): Do not output postbootstrap dependencies at
	first.  Output non-target ones changed for configure to depend
	on stage_last @if gcc-bootstrap, and the original deps @unless
	gcc-bootstrap.
	* configure.in, Makefile.in: Rebuilt.

2018-06-28  Jackson Woodruff  <jackson.woodruff@arm.com>

	* MAINTAINERS (write after approval): Add myself.

2018-06-26  Rasmus Villemoes  <rv@rasmusvillemoes.dk>

	* MAINTAINERS (write after approval): Add myself.

2018-06-19  Nick Clifton  <nickc@redhat.com>

	* zlib/configure.ac: Restore old behaviour of only enabling
	multilibs when a target subdirectory is defined.  This allows
	building with srcdir == builddir.
	* zlib/configure: Regenerate.

2018-06-18  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.def (fortran): Add check-target-libgomp-fortran.
	* Makefile.tpl (check-target-libgomp-fortran): New phony target.
	* Makefile.in: Regenerate.

2018-06-16  Ben Elliston  <bje@gnu.org>

	* config.guess: Import latest version.
	* config.sub: Likewise.

2018-06-08  Martin Liska  <mliska@suse.cz>

	* MAINTAINERS: Remove MPX-related entries.
	* Makefile.def: Remove libmpx support.
	* Makefile.in: Regenerate.